--- a/src/components/atoms/BannerInfo/BannerInfo.css
+++ b/src/components/atoms/BannerInfo/BannerInfo.css
@@ -156,6 +156,14 @@
 .text_alert{
     color: #ffdf1b;
     padding-left: 0px;
+    width: 100%;
+    height: 100%;
+    /* background: red; */
+    /* border: 1px solid black; */
+    /* text-align: center; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .bannerInfo-NotesWrapper{
