--- a/src/components/Organisms/UsuarioHistorialApuestaDeterminada/UsuarioHistorialApuestaDeterminada.css
+++ b/src/components/Organisms/UsuarioHistorialApuestaDeterminada/UsuarioHistorialApuestaDeterminada.css
@@ -13,3 +13,10 @@
 .o-UsuarioMensajeNuevo-content{
     padding: 15px 0;
 }
+.o-UsuarioMensajeNuevo-content-text{
+    margin-top: 15px;
+    font-size: 13px;
+    color: #282828;
+    line-height: 20px;
+    padding-left: 15px;
+}
