--- a/src/components/molecules/ModalApuesta/ModalApuesta.css
+++ b/src/components/molecules/ModalApuesta/ModalApuesta.css
@@ -107,9 +107,20 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    flex-direction: column;
 }
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+.m-ModalApuesta-ganancia{
+    color: #9effe0;
+    font-size: 11px;
+    margin: 0;
+}
+.m-ModalApuesta-button-active{
+    color: white;
+    background-color: #137a5a;
 }
