Actualizacion de la tabla de apuestas

--- a/src/components/molecules/ModalApuesta/ModalApuesta.css
+++ b/src/components/molecules/ModalApuesta/ModalApuesta.css
@@ -33,6 +33,7 @@
 .m-ModalApuesta-data-title{
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 .m-ModalApuesta-options, .m-ModalApuesta-options-input{
     display: flex;
